Fixed Bug #26703 (Certain characters inside strings incorrectly treated as keywords). Original patch by vrana@php.net.

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@147327 c90b9560-bf6c-de11-be94-00142212c4b1